# iosplayer

./: .gitignore  README-CN.md  README.md  README_CN.md  autogen.sh  configure.ac
src/: Makefile.am  main.c
